[gd_scene load_steps=3 format=3 uid="uid://1nws1ni3xgmy"]

[ext_resource type="Theme" uid="uid://d2cxgswnxv5r8" path="res://theme/menuTheme.tres" id="1_2le1w"]
[ext_resource type="Script" path="res://menus/settings/settings.gd" id="1_iqthn"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("1_2le1w")
script = ExtResource("1_iqthn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -118.0
offset_right = 43.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="Master" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX
"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
